# 2025-

project1/: CMakeLists.txt  T-table.txt  T-tablegen.c  a.out  gen  main.c  sm4.c  sm4.h  sm4_test  sm4_test.c  sm4_withTtable.c  sm4self.c  sm4self.cpp
project3/: groth16.sh  input.json  myposeidon2.circom  myposeidon2.sym  myposeidon2_0000.zkey  myposeidon2_final.zkey  pot12_0001.ptau  proof.json  verification_key.json  witness.json
project3/myposeidon2_js/: myposeidon2.wasm
project4/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  sm3.h  sm3_base.c  sm3_benchmark  sm3_benchmark.c  sm3_parallel.c
